--- a/index.html
+++ b/index.html
@@ -37,6 +37,39 @@
             </div>
         </div>
     </div>
+
+    <div class="container row col">
+        <div class="card-deck">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        Lorem.
+                    </h5>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo ullam reiciendis soluta saepe commodi fuga, debitis nesciunt similique, vitae magnam adipisci eveniet veniam. In labore voluptates soluta quos pariatur corporis.
+                    </p>
+                </div>
+                <div class="card-footer">
+                    <a href="" class="btn btn-primary"></a>
+                    <a href="" class="btn btn-primary"></a>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        Ipsum.
+                    </h5>
+                    <p class="card-text">
+                        Magnam quo temporibus voluptates laboriosam? Adipisci maiores porro distinctio veniam excepturi impedit voluptatibus. Ab provident quidem sunt. Culpa esse molestias libero quibusdam enim in praesentium, aut eius iste! Beatae, quaerat!
+                    </p>
+                </div>
+                <div class="card-footer">
+                    <a href="" class="btn btn-primary"></a>
+                    <a href="" class="btn btn-primary"></a>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
