--- a/index.html
+++ b/index.html
@@ -43,11 +43,18 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">
-                        Lorem.
+                        Spring MVC 게시판 구현
                     </h5>
                     <p class="card-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo ullam reiciendis soluta saepe commodi fuga, debitis nesciunt similique, vitae magnam adipisci eveniet veniam. In labore voluptates soluta quos pariatur corporis.
+                        Spring MVC를 활용한 게시판입니다.
                     </p>
+                    <ul>
+                        <li>HTML,CSS</li>
+                        <li>JavaScript,Jquery</li>
+                        <li>Java,Spring MVC</li>
+                        <li>MariaDB,SQL,Mybatis</li>
+                      
+                    </ul>
                 </div>
                 <div class="card-footer">
                     <a href="" class="btn btn-primary"></a>
