--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                     </ul>
                 </div>
                 <div class="card-footer">
-                    <a href="" class="btn btn-primary"></a>
-                    <a href="" class="btn btn-primary"></a>
+                    <a href="https://github.com/Yongssun/spring20220513" class="btn btn-primary">코드 보기</a>
+                    <a href="http://13.125.39.160/spr/board/list" class="btn btn-primary">시연하기</a>
                 </div>
             </div>
             <div class="card">
