--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </ul>
                 </div>
                 <div class="card-footer">
-                    <a href="https://github.com/Yongssun/spring20220513" class="btn btn-primary">코드 보기</a>
+                    <a href="https://github.com/Yongssun/spring20220513" class="btn btn-outline-primary">코드 보기</a>
                     <a href="http://13.125.39.160/spr/board/list" class="btn btn-primary">시연하기</a>
                 </div>
             </div>
