--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
         </div>
     </div>
 
-    <div class="container row col">
-        <div class="card-deck">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+        <div class="card-deck p-5 mb-4 bg-light ronded-3">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">
@@ -77,6 +79,8 @@
             </div>
         </div>
     </div>
+</div>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
