--- a/index.html
+++ b/index.html
@@ -66,15 +66,18 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">
-                        Ipsum.
+                       디자인 사이트
                     </h5>
                     <p class="card-text">
-                        Magnam quo temporibus voluptates laboriosam? Adipisci maiores porro distinctio veniam excepturi impedit voluptatibus. Ab provident quidem sunt. Culpa esse molestias libero quibusdam enim in praesentium, aut eius iste! Beatae, quaerat!
+                 디자인 웹 사이트는 소비자와 디자이너가 작품을 올리고 거래 할 수 있습니다.
+디자이너 뿐만 아니라 소비자도 자유롭게 작품을 올릴 수 있습니다.
+부담없이 자유롭게 본인의 작품을 뽐낼 수 있습니다.
+합리적인 가격으로 거래 할 수 있는 TRAZAR에서 마음껏 뽐내보세요!
                     </p>
                 </div>
                 <div class="card-footer">
-                    <a href="" class="btn btn-primary"></a>
-                    <a href="" class="btn btn-primary"></a>
+                    <a href="https://github.com/Yongssun/TRAZAR" class="btn btn-primary">코드보기</a>
+                    <a href="http://3.34.50.204/trazar/designBoard/list" class="btn btn-primary">시연하기</a>
                 </div>
             </div>
         </div>
